--- a/my-app/vercel.json
+++ b/my-app/vercel.json
@@ -1,10 +1,8 @@
 {
-    "version": 2,
     "builds": [
-      { "src": "next.config.js", "use": "@vercel/node" },
-      { "src": "package.json", "use": "@vercel/next" }
+      { "src": "package.json", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+      { "src": "/(.*)", "dest": "/$1" }
     ]
   }
